# python-utils-config-formatter

./: README.md  package.base.dockerfile  pyproject.toml
.github/workflows/: test.yml
config/: config.cloud.google.env.PROD.json  config.cloud.google.services.json  config.solution.json  naming.patterns.json
src/surquest/utils/config/: __init__.py  formatter.py
test/formatter/: test_formatter.py
